통합회원가입 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -13,7 +13,7 @@
 /* Login Form : 공통 */
 .mem-Tit {
     text-align: center;
-    padding: 65px 0 100px;
+    padding: 65px 0;
 }
 .mem-Tit span {
     font-family: "NotoSansCJKkr-Regular", "Noto Sans KR", "Malgun Gothic", "맑은 고딕";
