--- a/public/css/willbes/style_cop_sea.css
+++ b/public/css/willbes/style_cop_sea.css
@@ -1,7 +1,7 @@
 /*********************************************     Main Container : Cop_sea     *********************************************/
 /* Main Container : Cop_sea */
 .sea .tx-color {
-    color: #0c5dc0;
+    color: #9177d4;
 }
 .Section2 { background: #f7f7f7}
 
@@ -24,7 +24,7 @@
     background: #fff;
 }
 .sea .smallTit strong {
-    color:#0c5dc0;
+    color:#9177d4;
 }
 
 .sea .smallTit a {
@@ -79,24 +79,24 @@
     height: 280px;
     margin-left: 1px;
 }
-.Section .ProfCopBox > li:first-child {
+.sea .Section .ProfCopBox > li:first-child {
     margin-left: 0;
 }
-.Section .ProfCopBox .ProfBtns {
+.sea .Section .ProfCopBox .ProfBtns {
     position: absolute;
     width: 159px;
     bottom: 0;
     left: 0;    
     z-index: 1;
 }
-.Section .ProfCopBox .ProfBtns li {    
+.sea .Section .ProfCopBox .ProfBtns li {    
     display: inline;
     float: left;
     width: 50%;   
     height: 40px;
     height: 40px;          
 }
-.Section .ProfCopBox .ProfBtns li a {    
+.sea .Section .ProfCopBox .ProfBtns li a {    
     display: block;
     line-height: 40px;    
     color:#fff;
@@ -104,65 +104,23 @@
     margin-left: 1px; 
     background: rgba(0,0,0,.5); 
 }
-.Section .ProfCopBox .ProfBtns li:first-child a {
+.sea .Section .ProfCopBox .ProfBtns li:first-child a {
     margin-left: 0;
 }
-.Section .ProfCopBox .ProfBtns li a:hover {
-    background:#0c5dc0;
+.sea .Section .ProfCopBox .ProfBtns li a:hover {
+    background:#9177d4;
     font-size: 14px;
 }
-.Section .ProfCopBox .ProfBtns li span {
+.sea .Section .ProfCopBox .ProfBtns li span {
     padding-left:10px;
 }
-.Section .ProfCopBox .ProfBtns:after,
-.Section .ProfCopBox:after {
+.sea .Section .ProfCopBox .ProfBtns:after,
+.sea .Section .ProfCopBox:after {
     content: '';
     display: block;
     clear: both;
 }
 
-/**/
-.sea .Profinfo {
-    position: relative;
-}
-.sea .Profinfo li {
-    display: inline;
-    float: left;
-    margin-right:2px;
-}
-.sea .Profinfo li:last-child {
-    margin:0;
-}
-.sea .Profinfo ul:after {
-    content:'';
-    display: block;
-    clear:both;
-}
-.sea .Profinfo span {
-    position: absolute;
-    width: 100px;
-    top:720px;
-    left:60px;
-    z-index: 1;
-}
-.sea .Profinfo span a {
-    display: block;
-    text-align: center;
-    background: #fff;
-    color:#0c5dc0;
-    font-size: 14px;
-    font-weight: 600;
-    padding:10px 0 12px;
-    border-radius: 0 20px 20px;
-    border:2px solid #0c5dc0;
-}
-.sea .Profinfo span a:hover {
-    background: #0c5dc0;
-    color:#fff;
-}
-.sea .Profinfo span.btn02 {
-    left:863px;
-}
 
 /**/
 .sea .proPAss li {
@@ -221,26 +179,6 @@
     right: -34px;
 }
 
-/* Main Container : Prof : Cop_sea */
-.sea .Section .ProfCopBox > li {
-    position: relative;
-    display: inline;
-    float: left;
-    width: 220px;
-    height: 327px;
-    margin-left: 5px;
-}
-.sea .Section .ProfCopBox > li:first-child {
-    margin-left: 0;
-}
-.sea .Section .ProfCopBox .ProfBtns {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;    
-    z-index: 1;
-}
-
 /* Main Container : pass : cSlider : sliderPassList : Cop_sea */
 .sea .cSlider.sliderPassList .bx-wrapper .bx-prev {
     background: url("../../img/willbes/cop_sea/btn_prev_on.png") no-repeat 0 0;
@@ -262,18 +200,18 @@
 
 /* Main Container : SpecialLecBox */
 .sea .Section .SpecialLecBox .infoTit .btn .btn-sbj a {
-    background: #0c5dc0;
+    background: #9177d4;
 }
 .sea .Section .SpecialLecBox .infoList .List-Table li a span {
     float: left;
     width: 130px;
-    color: #0c5dc0;
+    color: #9177d4;
     text-align: center;
 }
 
 /* Main Container : Notice : Cop_sea */
 .sea .Section .nNoticeBox .infoBox .infoTit {
-    color: #0c5dc0;
+    color: #9177d4;
     line-height: 20px;
     font-weight: 600;
 }
