해양경찰특채 온라인 메인

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -575,6 +575,9 @@ select[disabled] {
 .mt5 {
   margin-top: 5px !important;
 }
+.mt8 {
+  margin-top: 8px !important;
+}
 .mt10 {
   margin-top: 10px !important;
 }
