--- a/public/css/willbes/style_cop_adm.css
+++ b/public/css/willbes/style_cop_adm.css
@@ -3,6 +3,9 @@
 .adm .tx-color {
     color: #008b6c;
 }
+.adm .cop-color {
+    color: #008b6c;
+}
 .Section2 { background: #f7f7f7}
 
 /* Main Container : Tit : Cop_adm */
