경찰 온라인 프로모션

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7318,7 +7318,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     float: right;
     width: 285px;
     height: 245px;
-    margin-top: 0;
+    margin-top: 30px;
 }
 .MyInfoBoxList .will-Tit {
     background: #fff;
