공무원 법원직, 기술직, 군무원 메인

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -9,6 +9,8 @@
 @import url("style_gosi.css");
 @import url("style_gosi_acad.css");
 @import url("style_gosi_law.css");
+@import url("style_gosi_tech.css");
+@import url("style_gosi_gp.css");
 @import url("style_gpgosi.css");
 
 
