--- a/public/css/willbes/style_gosi_tech.css
+++ b/public/css/willbes/style_gosi_tech.css
@@ -1,47 +1,48 @@
-/*********************************************     Main Container : law     *********************************************/
-.law .Section2 {
+/*********************************************     Main Container : tech     *********************************************/
+.tech .Section2 {
     background: #f3f3f3;
 }
-.law .Section3 {
+.tech .Section3 {
     background: #f7f7f7;
 }
 
-.law .Depth .depth:last-child strong {
+.tech .Depth .depth:last-child strong {
     color: #ba560e;
 }
 
 /* Main Container : MainVisual */
-.law .VisualsubBox .bx-wrapper .bx-controls-auto {
+.tech .VisualsubBox .bx-wrapper .bx-controls-auto {
     left:20px;
     bottom: 20px;
     margin: 0;
     width: 50px;
     z-index: 90;
   }
-.law .VisualsubBox .bx-wrapper .bx-pager {
+.tech .VisualsubBox .bx-wrapper .bx-pager {
     float: right;
     width: auto;
     left:60px;
     bottom: 20px;
     text-align: right;
 }
-.law .VisualsubBox .bx-wrapper .bx-pager.bx-default-pager a {
+.tech .VisualsubBox .bx-wrapper .bx-pager.bx-default-pager a {
     background: #fff;
     width: 8px;
     height: 8px;
     margin: 0 2px;
 }
 
+
 /* Main Container : Prof */
-.law .ProfBox {
+.tech .ProfBox {
     margin-top:70px;
 }
-.law .ProfBox .PBtab li {
+.tech .ProfBox .PBtab li {
     display: inline;
     float: left;
     width: 50%;
 }
-.law .ProfBox .PBtab li a {
+.tech .ProfBox .PBtab li a {
     display: block;
     text-align: center;
     font-size: 22px;
@@ -49,123 +50,77 @@
     height: 54px;
     line-height: 54px;
     border:1px solid #b9b9b9;
-    border-bottom:1px solid #643fb5;
+    border-bottom:1px solid #6faf4e;
 }
-.law .ProfBox .PBtab li a.active {
-    color:#643fb5;
-    border:1px solid #643fb5;
+.tech .ProfBox .PBtab li a.active {
+    color:#6faf4e;
+    border:1px solid #6faf4e;
     border-bottom:1px solid #fff;
     font-weight: 600;
 }
-.law .ProfBox .PBtab:after {
+.tech .ProfBox .PBtab:after {
     content: "";
     display: block;
     clear: both;
 }
-.law .ProfBox .PBcts li {
+.tech .ProfBox .PBcts li {
     float: left;
     width: 274px;
     height: 234px;
     margin-left: 8px;
 }
-.law .ProfBox .PBcts li:first-child {
+.tech .ProfBox .PBcts li:first-child {
     margin-left: 0;
 }
 
-.law .ProfBox .PBcts:after {
+.tech .ProfBox .PBcts:after {
     content: "";
     display: block;
     clear: both;
 }
 
-/**/
-.law .Section .tipGo {
-    position: absolute;
-    width: 824px;
-    top:580px;
-    left:50%;
-    margin-left:-412px;
-}
-.law .Section .tipGo li {
-    display: inline;
-    float: left;
-    width: 140px;
-}
-.law .Section .tipGo li:nth-child(1) {
-    width: 136px;
-}
-.law .Section .tipGo li:nth-child(2) {
-    width: 136px;
-}
-.law .Section .tipGo li:nth-child(3) {
-    width: 134px;
-}
-.law .Section .tipGo li:nth-child(4) {
-    width: 135px;
-}
-.law .Section .tipGo li:nth-child(5) {
-    width: 134px;
-}
-.law .Section .tipGo li:nth-child(6) {
-    width: 143px;
-}
-.law .Section .tipGo li a {
-    display: block;
-    text-align: center;
-    color:#fff;
-    background: #643fb5;
-    height: 34px;
-    line-height: 34px;
-    width: 107px;
-    margin: 0 auto;
-    border-bottom:4px solid #3b1984;
-}
-.law .Section .tipGo li a:hover {
-    background: #3b1984;
-    border-bottom:none
-}
 
 /**/
-.law .smallTit {
+.tech .smallTit {
     border-top:1px solid #000;
     font-size: 22px;
     color:#363636;    
     position: relative;
 }
-.law .smallTit p {
+.tech .smallTit p {
     position: absolute;
     top:-15px;
     text-align:left;
     width: 100%;
 }
-.law .smallTit p a {vertical-align: top; margin-left: 10px}
-.law .smallTit span {
+.tech .smallTit p a {vertical-align: top; margin-left: 10px}
+.tech .smallTit span {
     font-weight: 600;
     background: #fff;
     padding:0 20px 0 0;
 }
-.law .smallTit strong {
+.tech .smallTit strong {
     color:#ba560e;
 }
 
-.law .will-listTit {
+.tech .will-listTit {
     margin-bottom: 15px;
     color:#181818;
 }
 
 
 /* Main Container : Notice : noticeTabs */
-.law .tabWrap.noticeWrap {
+.tech .tabWrap.noticeWrap {
     height: 16px;
     border: none;
 }
-.law .tabWrap.noticeWrap li {
+.tech .tabWrap.noticeWrap li {
     float: left;
     width: auto;
     height: 16px;
     margin-right: 10px;
 }
-.law .tabWrap.noticeWrap li a {
+.tech .tabWrap.noticeWrap li a {
     display: block;
     width: 100%;
     height: 19px;
@@ -178,27 +133,27 @@
     border-right:1px solid #999 !important;
     padding-right: 10px;
 }
-.law .tabWrap.noticeWrap li a.on {
+.tech .tabWrap.noticeWrap li a.on {
     height: 19px;
     line-height: 19px;
     font-weight: 600;
-    color: #643fb5;
+    color: #6faf4e;
     border:none !important;
     border-right:1px solid #999 !important;
 }
-.law .tabWrap.noticeWrap li:last-child a.on,
-.law .tabWrap.noticeWrap li:last-child a {
+.tech .tabWrap.noticeWrap li:last-child a.on,
+.tech .tabWrap.noticeWrap li:last-child a {
     border-right:none !important;
 }
-.law .tabBox.noticeBox a.btn-add {
+.tech .tabBox.noticeBox a.btn-add {
     position: absolute;
     top: -16px;
     right: 0;
 }
-.law .tabBox.noticeBox .List-Table {
+.tech .tabBox.noticeBox .List-Table {
     width: 520px;
 }
-.law .tabBox.noticeBox .List-Table li {
+.tech .tabBox.noticeBox .List-Table li {
     position: relative;
     font-size: 13px;
     color: #3a3a3a;
@@ -206,7 +161,7 @@
     line-height: 37px;
     border-bottom: 1px solid #e3e3e3;
 }
-.law .tabBox.noticeBox .List-Table li a {
+.tech .tabBox.noticeBox .List-Table li a {
     display: inline-block;
     width: 80%;
     text-overflow: ellipsis;
@@ -214,8 +169,8 @@
     overflow: hidden;
     letter-spacing: 0;
 }
-.law .tabBox.noticeBox .List-Table li a span {
-    background: #643fb5;
+.tech .tabBox.noticeBox .List-Table li a span {
+    background: #6faf4e;
     color:#fff;
     padding: 0 10px;
     border-radius: 10px;
@@ -224,6 +179,6 @@
 
 
 /* Main Container : Gosi */
-.law .tx-color {
-    color: #643fb5;
+.tech .tx-color {
+    color: #6faf4e;
 }
