--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -961,7 +961,10 @@
 .Section .nNoticeBox .imgBox {
     float: left;
     width: 82px;
-    margin: 0 15px 0 0;
+    height: 82px;
+    margin-right: 10px;
+    overflow: hidden;
+    background:#e1e1e1;
 }
 .Section .nNoticeBox .imgBox img {
     width: 100%;
