--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -10511,7 +10511,12 @@ table.acadlecInfoPackageTable tr.Top td {
 
 
 /*프로모션 기본 댓글*/
-.replySection { width:1000px; margin:30px auto 100px; font-size:12px; line-height: 1.4}
+.replySection { 
+    width:1000px; 
+    margin:30px auto 100px; 
+    font-size:12px; 
+    line-height: 1.4
+}
 .replyWrite {
     background:#555556;
     padding:10px;
@@ -10620,7 +10625,82 @@ table.acadlecInfoPackageTable tr.Top td {
     border-bottom:1px solid #999;
 }
 
+/* 프로모션 홍보 url 댓글 */
+.urlWrap {
+    width:1000px; 
+    margin:30px auto 100px; 
+    font-size:12px; 
+    line-height: 1.4; 
+    color:#555556;
+}
+.urlWrap .textarBox {
+    background:#e8e6d9;
+    padding:20px;
+    text-align: center;
+    border-radius: 40px 40px 0 0;    
+}
+.urlWrap .textarBox span {
+    padding: 0 20px;
+    font-weight: 500;
+    font-size:14px;
+}
+.urlWrap .textarBox input {
+    width:65%; 
+    height:36px;
+    line-height:36px;
+    border:2px solid #929292;  
+    border-radius: 20px 0 0 20px;
+    padding-left:20px;
+    vertical-align: middle;      
+}
+.urlWrap .textarBox a {
+    display: inline-block;
+    text-align: center;
+    color:#fff;
+    background: #000;
+    margin-left:0;
+    height:36px;
+    line-height: 36px;
+    border-radius: 0 20px 20px 0;
+    vertical-align: middle; 
+}
+.urlWrap .url-List {
+    margin-top: 1px;
+}
+.urlWrap .url-List table {    
+    border-top:0;
+}
+.urlWrap .url-List tr {
+    border-bottom:1px solid #e8e6d9;
+ }
+.urlWrap .url-List thead th {
+    background:#e8e6d9;
+    font-weight: bold;
+}
+.urlWrap .url-List thead th,
+.urlWrap .url-List td {
+    padding:10px;
+    text-align: center;    
+}
+.urlWrap .url-List td:last-child {
+    text-align: left;  
+}
+.urlWrap .url-List td a {
+    float: right;
+    font-size: 12px;
+    border:1px solid #eee;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    text-align: center;
+    color:#ccc;
+    font-family: "Helvetica", "Apple SD Gothic Neo", "sans-serif";
+}
+.urlWrap .url-List td a:hover {
+    border:1px solid #000;
+    color:#000;
 
+}
 
 /* Only IE Hack */
 /* IE7, IE8, IE9 */
