--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2939,6 +2939,19 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     height: 100%;
 }
 
+.willbes-Layer-Trans {
+    display: none;
+    background: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 105;
+    width: 100%;
+    height: 100%;
+}
+
 .willbes-Layer-popBox {
     display: none;
     position: fixed;
