--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -289,6 +289,7 @@ body {
 	font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif";
   min-width: 1300px;
   word-break: break-all;
+  overflow-x: hidden;
 }
 body#widthFrame {
   min-width: 100%;
