--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -10013,6 +10013,7 @@ table.acadlecInfoPackageTable tr.Top td {
     position: absolute;
     top: 0;
     right: 0;
+    margin-right: -264px;
     z-index: 9999;
 }
 
