--- a/public/css/willbes/style_gosi_tech.css
+++ b/public/css/willbes/style_gosi_tech.css
@@ -106,6 +106,25 @@
     }
 
 /**/
+.tech .ProfBoxB li {
+    float: left;
+    width: 274px;
+    height: 234px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+}
+.tech .ProfBoxB li:nth-child(5),
+.tech .ProfBoxB li:first-child {
+    margin-left: 0;
+}
+.tech .ProfBoxB:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+
+/**/
 .tech .smallTit {
     border-top:1px solid #000;
     font-size: 22px;
