--- a/public/css/willbes/style_gosi.css
+++ b/public/css/willbes/style_gosi.css
@@ -9,6 +9,11 @@
 }
 
 /* Main Container : MainVisual */
+.gosi .MainVisual {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
 .gosi .MainVisual:after {
     content: "";
     display: block;
@@ -16,9 +21,11 @@
 }
 
 .gosi .VisualBox {
-    width: 100%;
-    max-width: 1920px;
-    margin:0 auto;
+    position:absolute;
+    top:0;
+    left:50%;
+    margin-left:-960px;
+    width:1920px;
     height: 400px;
     overflow: hidden;
   }
@@ -313,7 +320,7 @@
 }
 
 /*메인 수강후기*/
-.lecReviewBx .sliderNumRv {position: relative; overflow: hidden; font-size:14px} 
+.lecReviewBx .sliderNumRv {position:relative; overflow: hidden; font-size:14px} 
 .lecReviewBx .sliderNumRv .lecReview {float:left; display: block; width:373px !important; min-height:120px !important; border-right:1px solid #d6d6d6; margin-top: 20px; line-height: 1.3}
 .lecReviewBx .sliderNumRv .lecReview:nth-child(3n+3) {border-right:0}
 .lecReviewBx .sliderNumRv .imgBox {
